--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@ ext/thin_parser/conftest.dSYM/*
 ext/thin_parser/*.log
 ext/thin_parser/*.o
 ext/thin_parser/*.bundle
+ext/thin_parser/*.obj
+ext/thin_parser/*mswin32*
+ext/thin_parser/vc60.pdb
+ext/thin_parser/*.so
 lib/*.bundle
+lib/*.so
 log/*.log
 spec/rails_app/log
 doc/rdoc/*
