--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ ext/thin_parser/*.obj
 ext/thin_parser/*mswin32*
 ext/thin_parser/vc60.pdb
 ext/thin_parser/*.so
-lib/*.bundle
-lib/*/**.so
+*.bundle
+*.so
 log
 spec/rails_app/log
 doc/rdoc/*
