--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,6 +19,7 @@ jobs:
           - 2.5
           - 2.6
           - 2.7
+          - truffleruby-head
         
         include:
           - experimental: true
