Test on ruby 3.2 and rack 2

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -6,20 +6,21 @@ jobs:
   test:
     runs-on: ${{matrix.os}}-latest
     continue-on-error: ${{matrix.experimental}}
-    
+
     strategy:
       matrix:
         experimental: [false]
-        
+
         os:
           - ubuntu
           - macos
-        
+
         ruby:
           - 2.5
           - 2.6
           - 2.7
-        
+          - 3.2
+
         include:
           - experimental: true
             os: ubuntu
@@ -30,17 +31,22 @@ jobs:
             env: BUNDLE_GEMFILE=gems/rack-v1.rb
           - experimental: true
             os: ubuntu
-            ruby: 2.7
-            env: BUNDLE_GEMFILE=gems/rack-head.rb
-    
+            ruby: 3.2
+            env: BUNDLE_GEMFILE=gems/rack-v2.rb
+          # enable when rack v3 is supported
+          # - experimental: true
+          #  os: ubuntu
+          #  ruby: 3.2
+          #  env: BUNDLE_GEMFILE=gems/rack-head.rb
+
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{matrix.ruby}}
-    
+
     - name: Install dependencies
       run: ${{matrix.env}} bundle install
-    
+
     - name: Run tests
       run: ${{matrix.env}} bundle exec rake
