--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,15 +13,19 @@ jobs:
 
         os:
           - ubuntu
-          - macos
 
         ruby:
           - 2.5
           - 2.6
           - 2.7
+          - 3.0
+          - 3.1
           - 3.2
+          - 3.3
 
         include:
+          - os: macos
+            ruby: 3.3
           - experimental: true
             os: ubuntu
             ruby: head
