--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,9 @@ jobs:
           - 3.4
 
         gemfile:
+          - gems/rack-v1.rb
           - gems/rack-v2.rb
+          - gems/rack-v3.rb
 
         include:
           - experimental: false
@@ -50,23 +52,14 @@ jobs:
             gemfile: gems/rack-v2.rb
           - experimental: true
             os: ubuntu
-            ruby: 2.7
-            gemfile: gems/rack-v1.rb
-          - experimental: true
-            os: ubuntu
-            ruby: 3.4
-            gemfile: gems/rack-v2.rb
-          - experimental: true
-            os: ubuntu
-            ruby: 3.4
-            gemfile: gems/rack-v3.rb
-          - experimental: true
-            os: ubuntu
             ruby: 3.4
             gemfile: gems/rack-head.rb
+        exclude:
+          - { ruby: 3.3, gemfile: gems/rack-v1.rb }
+          - { ruby: 3.4, gemfile: gems/rack-v1.rb }
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - uses: ruby/setup-ruby@v1
       with:
