--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         ruby:
           - 2.6
           - 2.7
-          - 3.0
+          - "3.0"
           - 3.1
           - 3.2
           - 3.3
@@ -46,10 +46,18 @@ jobs:
             os: macos
             ruby: 3.4
             gemfile: gems/rack-v2.rb
+          - experimental: false
+            os: macos
+            ruby: 3.4
+            gemfile: gems/rack-v3.rb
           - experimental: true
             os: ubuntu
             ruby: head
             gemfile: gems/rack-v2.rb
+          - experimental: true
+            os: ubuntu
+            ruby: head
+            gemfile: gems/rack-v3.rb
           - experimental: true
             os: ubuntu
             ruby: 3.4
