--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,43 +30,44 @@ jobs:
         ruby:
           - 2.6
           - 2.7
-          - 3.0
+          - "3.0"
           - 3.1
           - 3.2
           - 3.3
           - 3.4
 
         gemfile:
+          - gems/rack-v1.rb
           - gems/rack-v2.rb
+          - gems/rack-v3.rb
 
         include:
           - experimental: false
             os: macos
             ruby: 3.4
             gemfile: gems/rack-v2.rb
+          - experimental: false
+            os: macos
+            ruby: 3.4
+            gemfile: gems/rack-v3.rb
           - experimental: true
             os: ubuntu
             ruby: head
             gemfile: gems/rack-v2.rb
           - experimental: true
             os: ubuntu
-            ruby: 2.7
-            gemfile: gems/rack-v1.rb
-          - experimental: true
-            os: ubuntu
-            ruby: 3.4
-            gemfile: gems/rack-v2.rb
-          - experimental: true
-            os: ubuntu
-            ruby: 3.4
+            ruby: head
             gemfile: gems/rack-v3.rb
           - experimental: true
             os: ubuntu
             ruby: 3.4
             gemfile: gems/rack-head.rb
+        exclude:
+          - { ruby: 3.3, gemfile: gems/rack-v1.rb }
+          - { ruby: 3.4, gemfile: gems/rack-v1.rb }
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - uses: ruby/setup-ruby@v1
       with:
